# ninja-launcher

./: CMakeLists.txt  README.md  debug.c  debug.h  main.c
BinariesLancher/: launcher.c  launcher.h
BinariesLauncher/: launcher.c
Configuration/: configurationManager.c  configurationManager.h
